--- a/2ID90-Group-38/nbproject/project.properties
+++ b/2ID90-Group-38/nbproject/project.properties
@@ -36,8 +36,8 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.AICompetition.jar}:\
     ${file.reference.Utilities.jar}:\
+    ${file.reference.AICompetition.jar}:\
     ${file.reference.core2id90.jar}:\
     ${file.reference.jspf.core-1.0.2.jar}
 # Space-separated list of extra javac options
@@ -78,7 +78,7 @@ manifest.custom.codebase=
 manifest.custom.permissions=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
