--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ Temporary Items
 /AICompetition/nbproject/private/
 /AICompetition/dist/
 /2ID90-Group-38/dist/
+/2ID90-Group-38/nbproject/private/
+/2ID90-Group-38/build/
